--- a/tsconfig.electron.json
+++ b/tsconfig.electron.json
@@ -1,17 +1,18 @@
 // tsconfig.electron.json
-
 {
-    "extends": "./tsconfig.json",
-    "compilerOptions": {
-      "outDir": "dist/electron",
-      "module": "CommonJS",
-      "target": "ES2021",
-      "rootDir": "./electron", // Re-add rootDir as it helps with output structure
-      "moduleResolution": "node",
-      "noEmit": false, // Must be false for Electron compilation
-      "noEmitOnError": false,
-      "esModuleInterop": true
-    },
-    "include": ["electron/**/*.ts"], // Keep this broad to cover all .ts files in electron/
-    "exclude": ["node_modules"]
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "outDir": "dist/electron",
+    "module": "CommonJS",
+    "target": "ES2021",
+    "rootDir": "./electron",
+    "moduleResolution": "node",
+    "noEmit": false,
+    "noEmitOnError": false,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "verbatimModuleSyntax": false // Prevent import rewriting
+  },
+  "include": ["electron/**/*.ts", "electron/**/*.cts"],
+  "exclude": ["node_modules"]
 }
